[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ymaps"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
authors = [
    {name ="sfkan6", email ="sfkan6@yandex.ru"}
]

requires-python = ">=3.7"
dependencies = ["httpx>=0.23.0"]


[project.urls]
Home = "https://github.com/sfkan6/ymaps"


