[metadata]
name = ymaps

description = Client for Yandex Maps API
long_description = file: README.md, LICENSE
version = 0.1

author = sfkan6
author_email = sfkan6@yandex.ru

license = MIT
url = https://github.com/sfkan6/ymap-api
classifiers = 
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License


[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires = 
    requests==2.28.1
    urllib3==1.26.12


[options.packages.find]
where = src

